--- a/PixStream/src/App.css
+++ b/PixStream/src/App.css
@@ -1,42 +1,91 @@
-#root {
-  max-width: 1280px;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-align: none;
+  list-style: none;
+  font-family: 'segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+:root{
+  --color_primary: #6c63ff;
+  --text-color: black;
+  --color-bg: rgb(236, 236, 236);
+  --color-card: white;
+  --color-soft: #aaaaaa;
+  --color-border: lightgray;
+  --color-red: red;
+}
+.container{
+  min-width: 991px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1, h2, h3, h4, h5{
+  font-weight: 600;
+  color: var(--text-color);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img{
+  width: 100%;
+  display: block;
+  object-fit: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.user{
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.card {
-  padding: 2em;
+.user img{
+
+  width: 33px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
 }
 
-.read-the-docs {
-  color: #888;
+.user h4{
+  color: var(--color_primary);
+}
+body{
+
+  background-color: var(--color-bg);
+  color: var(--color-soft);
+
+}
+small, p {
+  color: var(--color-soft);
+}
+.btn{
+  padding: .6rem 1.6rem ;
+  display: inline-block;
+  width: fit-content;
+  cursor: pointer;
+  border-radius: .5rem;
+  border: none;
+  font-size: .9rem;
+  font-weight: 500;
+  transition: .3s ease;
+  
+}
+.btn:hover{
+  opacity: .7;
+}
+.btn-primary{
+  background: var(--color_primary);
+  color: white;
+}
+
+.btn-red{
+  background: var(--color-red);
+  color: white;
+}
+
+main{
+  display: grid;
+  grid-template-columns: 20% 54% 23%;
+  gap: 3%;
+  width: 100%;
 }
