--- a/PixStream/src/pages/login/Login.css
+++ b/PixStream/src/pages/login/Login.css
@@ -1,5 +1,5 @@
 .login{
-    background: var(--color_primary);
+    background: var(--color-primary);
     height: 100vh;
     width: 100%;
     display: flex;
@@ -30,15 +30,15 @@
 }
 
 .login .card span{
-    color: var(--color_primary);
+    color: var(--color-primary);
 }
 
 .login h2{
-    color: var(--color_primary);
+    color: var(--color-primary);
 }
 .login .card .right{
     flex: 1;
-    background: var(--color_primary);
+    background: var(--color-primary);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,7 +63,7 @@
 }
 
 .login form .btn{
-    color: var(--color_primary);
+    color: var(--color-primary);
     margin: 1rem;
 }
 
