--- a/PixStream/src/pages/signup/Signup.css
+++ b/PixStream/src/pages/signup/Signup.css
@@ -1,5 +1,5 @@
 .signup{
-    background: var(--color_primary);
+    background: var(--color-primary);
     height: 100vh;
     width: 100%;
     display: flex;
@@ -30,15 +30,15 @@
 }
 
 .signup .card span{
-    color: var(--color_primary);
+    color: var(--color_-rimary);
 }
 
 .signup h2{
-    color: var(--color_primary);
+    color: var(--color-primary);
 }
 .signup .card .right{
     flex: 1;
-    background: var(--color_primary);
+    background: var(--color-primary);
     display: flex;
     align-items: center;
     justify-content: center;
