--- a/PixStream/src/components/addPost/addPost.css
+++ b/PixStream/src/components/addPost/addPost.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
     max-width: 600px;
-    margin: auto;
+    justify-content: center;
     gap: 1rem;
     background: var(--color-card);
     align-items: center;
     border-radius: .5rem;
-    
+    margin-left: 5.5rem;
+    margin-bottom: 2.2rem;    
   }
   
   .postForm .form-top {
